<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical" 
    android:gravity="center"
    android:padding="10dp">
    
    <Button
        android:id="@+id/btnCallRecords"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#000000"
        android:contentDescription="@string/addchild"
        android:text="@string/call_record"
        android:textColor="#fff" />
    
    <Button
        android:id="@+id/btnMessageRecords"
        android:contentDescription="@string/addchild"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#000000"
        android:textColor="#fff"
        android:text="@string/message_records" />
    
    <Button
        android:id="@+id/btnPlaceRecords"
        android:contentDescription="@string/addchild"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#000000"
        android:textColor="#fff"
        android:text="@string/place_records" />

</LinearLayout>
