<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/welcome_to"
        android:textAppearance="?android:attr/textAppearanceMedium"
        
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#ffffff" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtReturning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/returning_user"
        android:textColor="#ffffff" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnParentLogin"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txtReturning"
        android:textColor="#ffffff" 
         android:background="#000000"
        android:text="@string/parent_login" />
    
    <Button
        android:id="@+id/btnChildLogin"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnParentLogin"
        android:textColor="#ffffff" 
         android:background="#000000"
        android:text="@string/child_login" />
    
    <TextView
        android:id="@+id/txtNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChildLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff" 
        android:text="@string/not_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff" 
        android:background="#000000"
        android:layout_below="@+id/txtNewUser"
        android:text="@string/register_now" />

</RelativeLayout>
