<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/txtParentLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="5dp"
        android:text="@string/child_login"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="5dp"
		android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/edPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:textColor="#ffffff"
        android:inputType="phone"
        android:hint="@string/phone" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/edPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textColor="#ffffff"
        android:inputType="numberPassword"
        android:hint="@string/pin_none" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:background="#000000"
        android:text="@string/login"
        android:textColor="#ffffff" />
   

</LinearLayout>
